fix: Fixed the image to play on safari

--- a/src/css/gaby.css
+++ b/src/css/gaby.css
@@ -42,9 +42,11 @@
   top: 50%;
   left: 50%;
   width: 105%;
+
   transform: translate(-50%, -50%);
   height: 104%;
   border-radius: 50%;
+  background: #3b9b6d;
   background-image: linear-gradient(
     var(--rotate),
     #68e3a8,
@@ -68,6 +70,7 @@
   margin: 0 auto;
   transform: scale(0.8);
   filter: blur(calc(var(--card-height) / 6));
+  background: #3b9b6d;
   background-image: linear-gradient(
     var(--rotate),
     #68e3a8,
