--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -34,19 +34,18 @@ a:focus {
     padding: 2rem 16px 0 16px;
 
     &__picture {
-      border-radius: 50%;
-      overflow: hidden;
       width: 160px;
-      height: 160px;
       position: relative;
 
       &__img {
         position: absolute;
-        top: 51.5%;
-        left: 52%;
+        top: 50%;
+        left: 50%;
         transform: translate(-50%, -50%);
-        width: 150px;
+        width: 160px;
+        height: 160px;
         z-index: 10;
+        border-radius: 50%;
         background-color: $primary-background-color;
       }
     }
